--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 coverage==7.9.1
 dj-rest-auth==7.0.1
 Django==5.2.3
+django-allauth==65.9.0
 django-cleanup==9.0.0
 django-cors-headers==4.7.0
 django-rest-auth==0.9.5
