--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@mui/material-nextjs": "^7.1.1",
+    "@mui/x-data-grid": "^8.5.3",
     "axios": "^1.10.0",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.28",
