--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,11 @@ django-cleanup==9.0.0
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+lxml==6.0.0
 psycopg2==2.9.10
 PyJWT==2.9.0
+PyMuPDF==1.26.1
+python-docx==1.2.0
 python-dotenv==1.1.0
 six==1.17.0
 sqlparse==0.5.3
