--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Django==5.2.3
 django-allauth==65.9.0
 django-cleanup==9.0.0
 django-cors-headers==4.7.0
+django-picklefield==3.3
+django-q2==1.8.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 lxml==6.0.0
