--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
+annotated-types==0.7.0
 asgiref==3.8.1
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpathlib==0.21.1
+confection==0.1.5
 coverage==7.9.1
+cymem==2.0.11
 dj-rest-auth==7.0.1
 Django==5.2.3
 django-allauth==65.9.0
@@ -9,12 +18,43 @@ django-picklefield==3.3
 django-q2==1.8.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+idna==3.10
+Jinja2==3.1.6
+langcodes==3.5.0
+language_data==1.3.0
 lxml==6.0.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+murmurhash==1.0.13
+numpy==2.2.6
+packaging==25.0
+preshed==3.0.10
 psycopg2==2.9.10
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.9.0
 PyMuPDF==1.26.1
 python-docx==1.2.0
 python-dotenv==1.1.0
+requests==2.32.4
+rich==14.0.0
+shellingham==1.5.4
 six==1.17.0
+smart_open==7.3.0
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 sqlparse==0.5.3
+srsly==2.5.1
+thinc==8.3.6
+tqdm==4.67.1
+typer==0.16.0
+typing-inspection==0.4.1
 typing_extensions==4.14.0
+urllib3==2.5.0
+wasabi==1.1.3
+weasel==0.4.1
+wrapt==1.17.2
