--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 asgiref==3.8.1
+attrs==25.3.0
+beautifulsoup4==4.13.4
 blis==1.3.0
 catalogue==2.0.10
 certifi==2025.6.15
@@ -9,6 +11,7 @@ cloudpathlib==0.21.1
 confection==0.1.5
 coverage==7.9.1
 cymem==2.0.11
+dill==0.4.0
 dj-rest-auth==7.0.1
 Django==5.2.3
 django-allauth==65.9.0
@@ -18,43 +21,100 @@ django-picklefield==3.3
 django-q2==1.8.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+docling==2.39.0
+docling-core==2.39.0
+docling-ibm-models==3.6.0
+docling-parse==4.1.0
+easyocr==1.7.2
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+et_xmlfile==2.0.0
+filelock==3.18.0
+filetype==1.2.0
+fsspec==2025.5.1
+hf-xet==1.1.5
+huggingface-hub==0.33.1
 idna==3.10
+imageio==2.37.0
 Jinja2==3.1.6
+jsonlines==3.1.0
+jsonref==1.1.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 langcodes==3.5.0
 language_data==1.3.0
-lxml==6.0.0
+latex2mathml==3.78.0
+lazy_loader==0.4
+lxml==5.4.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
+marko==2.1.4
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mpire==2.10.2
+mpmath==1.3.0
+multiprocess==0.70.18
 murmurhash==1.0.13
+networkx==3.4.2
+ninja==1.11.1.4
 numpy==2.2.6
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
 packaging==25.0
+pandas==2.3.0
+pillow==11.3.0
+pluggy==1.6.0
 preshed==3.0.10
 psycopg2==2.9.10
+pyclipper==1.3.0.post6
 pydantic==2.11.7
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.9.0
-PyMuPDF==1.26.1
-python-docx==1.2.0
+pylatexenc==2.10
+pypdfium2==4.30.1
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-pptx==1.0.2
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.4
 rich==14.0.0
+rpds-py==0.26.0
+rtree==1.4.0
+safetensors==0.5.3
+scikit-image==0.25.2
+scipy==1.15.3
+semchunk==2.2.2
+shapely==2.1.1
 shellingham==1.5.4
 six==1.17.0
 smart_open==7.3.0
+soupsieve==2.7
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+spacy_layout==0.0.12
 sqlparse==0.5.3
 srsly==2.5.1
+sympy==1.14.0
+tabulate==0.9.0
 thinc==8.3.6
+tifffile==2025.5.10
+tokenizers==0.21.2
+torch==2.7.1
+torchvision==0.22.1
 tqdm==4.67.1
+transformers==4.53.0
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+tzdata==2025.2
 urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.1
 wrapt==1.17.2
+xlsxwriter==3.2.5
