--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ docling-core==2.39.0
 docling-ibm-models==3.6.0
 docling-parse==4.1.0
 easyocr==1.7.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
 et_xmlfile==2.0.0
 filelock==3.18.0
 filetype==1.2.0
@@ -75,6 +75,7 @@ pylatexenc==2.10
 pypdfium2==4.30.1
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
+python-docx==1.2.0
 python-dotenv==1.1.0
 python-pptx==1.0.2
 pytz==2025.2
