--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
