--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ hf-xet==1.1.5
 huggingface-hub==0.33.1
 idna==3.10
 imageio==2.37.0
+inflect==7.5.0
 Jinja2==3.1.6
 jsonlines==3.1.0
 jsonref==1.1.0
@@ -50,6 +51,7 @@ markdown-it-py==3.0.0
 marko==2.1.4
 MarkupSafe==3.0.2
 mdurl==0.1.2
+more-itertools==10.7.0
 mpire==2.10.2
 mpmath==1.3.0
 multiprocess==0.70.18
@@ -110,6 +112,7 @@ torch==2.7.1
 torchvision==0.22.1
 tqdm==4.67.1
 transformers==4.53.0
+typeguard==4.4.4
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
