--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,16 @@ asgiref==3.8.1
 attrs==25.3.0
 beautifulsoup4==4.13.4
 blis==1.3.0
+Brotli==1.1.0
 catalogue==2.0.10
 certifi==2025.6.15
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 cloudpathlib==0.21.1
 confection==0.1.5
 coverage==7.9.1
+cssselect2==0.8.0
 cymem==2.0.11
 dill==0.4.0
 dj-rest-auth==7.0.1
@@ -30,6 +33,7 @@ en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_
 et_xmlfile==2.0.0
 filelock==3.18.0
 filetype==1.2.0
+fonttools==4.59.0
 fsspec==2025.5.1
 hf-xet==1.1.5
 huggingface-hub==0.33.1
@@ -68,13 +72,16 @@ pluggy==1.6.0
 preshed==3.0.10
 psycopg2==2.9.10
 pyclipper==1.3.0.post6
+pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+pydyf==0.11.0
 Pygments==2.19.2
 PyJWT==2.9.0
 pylatexenc==2.10
 pypdfium2==4.30.1
+pyphen==0.17.2
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
@@ -107,6 +114,8 @@ sympy==1.14.0
 tabulate==0.9.0
 thinc==8.3.6
 tifffile==2025.5.10
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 tokenizers==0.21.2
 torch==2.7.1
 torchvision==0.22.1
@@ -120,5 +129,8 @@ tzdata==2025.2
 urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.1
+weasyprint==66.0
+webencodings==0.5.1
 wrapt==1.17.2
 xlsxwriter==3.2.5
+zopfli==0.2.3.post1
