--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ asgiref==3.8.1
 attrs==25.3.0
 beautifulsoup4==4.13.4
 blis==1.3.0
+boolean.py==5.0
 Brotli==1.1.0
+CacheControl==0.14.3
 catalogue==2.0.10
 certifi==2025.6.15
 cffi==1.17.1
@@ -13,7 +15,9 @@ cloudpathlib==0.21.1
 confection==0.1.5
 coverage==7.9.1
 cssselect2==0.8.0
+cyclonedx-python-lib==9.1.0
 cymem==2.0.11
+defusedxml==0.7.1
 dill==0.4.0
 dj-rest-auth==7.0.1
 Django==5.2.3
@@ -49,6 +53,7 @@ langcodes==3.5.0
 language_data==1.3.0
 latex2mathml==3.78.0
 lazy_loader==0.4
+license-expression==30.4.4
 lxml==5.4.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
@@ -58,6 +63,7 @@ mdurl==0.1.2
 more-itertools==10.7.0
 mpire==2.10.2
 mpmath==1.3.0
+msgpack==1.1.1
 multiprocess==0.70.18
 murmurhash==1.0.13
 networkx==3.4.2
@@ -65,12 +71,18 @@ ninja==1.11.1.4
 numpy==2.2.6
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
+packageurl-python==0.17.5
 packaging==25.0
 pandas==2.3.0
 pillow==11.3.0
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.9.0
+platformdirs==4.3.8
 pluggy==1.6.0
 preshed==3.0.10
 psycopg2==2.9.10
+py-serializable==2.1.0
 pyclipper==1.3.0.post6
 pycparser==2.22
 pydantic==2.11.7
@@ -80,6 +92,7 @@ pydyf==0.11.0
 Pygments==2.19.2
 PyJWT==2.9.0
 pylatexenc==2.10
+pyparsing==3.2.3
 pypdfium2==4.30.1
 pyphen==0.17.2
 python-bidi==0.6.6
@@ -103,6 +116,7 @@ shapely==2.1.1
 shellingham==1.5.4
 six==1.17.0
 smart_open==7.3.0
+sortedcontainers==2.4.0
 soupsieve==2.7
 spacy==3.8.7
 spacy-legacy==3.0.12
@@ -117,6 +131,7 @@ tifffile==2025.5.10
 tinycss2==1.4.0
 tinyhtml5==2.0.0
 tokenizers==0.21.2
+toml==0.10.2
 torch==2.7.1
 torchvision==0.22.1
 tqdm==4.67.1
