--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ dill==0.4.0
 dj-rest-auth==7.0.1
 Django==5.2.3
 django-allauth==65.9.0
+django-auditlog==3.2.1
 django-cleanup==9.0.0
 django-cors-headers==4.7.0
 django-picklefield==3.3
