--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,10 @@
     "swr": "^2.3.4"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.1",
+    "@cypress/webpack-dev-server": "^5.1.3",
     "@eslint/eslintrc": "^3",
+    "cypress": "^15.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4"
   }
