--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "cypress run --component",
+    "coverage": "npx nyc report",
+    "test:coverage": "cypress run --component && npm run coverage"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -25,9 +28,13 @@
     "swr": "^2.3.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-react": "^7.27.1",
+    "@cypress/code-coverage": "^3.14.7",
     "@cypress/react": "^9.0.1",
     "@cypress/webpack-dev-server": "^5.1.3",
     "@eslint/eslintrc": "^3",
+    "babel-plugin-istanbul": "^7.0.1",
     "cypress": "^15.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4"
