--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "cypress run --component",
-    "coverage": "npx nyc report",
-    "test:coverage": "cypress run --component && npm run coverage"
+    "cy:open": "CYPRESS_TEST=true cypress open --component",
+    "cy:run": "CYPRESS_TEST=true cypress run --component",
+    "cy:report": "npx nyc report",
+    "cy:test": "npm run cy:run && npm run cy:report"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -29,13 +30,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-react": "^7.28.5",
     "@cypress/code-coverage": "^3.14.7",
     "@cypress/react": "^9.0.1",
     "@cypress/webpack-dev-server": "^5.1.3",
     "@eslint/eslintrc": "^3",
     "babel-plugin-istanbul": "^7.0.1",
-    "cypress": "^15.4.0",
+    "cypress": "^15.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4"
   }
