--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,12 +18,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           working-directory: ./frontend
-          start: npm run dev
-          wait-on: "http://localhost:3000"
-          browser: chrome
-
-        env:
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          component: true
 
       - name: Generate and check coverage
         working-directory: ./frontend
