--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -20,7 +20,7 @@ jobs:
           working-directory: ./frontend
           component: true
           env:
-            NEXT_PUBLIC_API_HOST: { { secrets.NEXT_PUBLIC_API_HOST } }
+            NEXT_PUBLIC_API_HOST: ${{ secrets.NEXT_PUBLIC_API_HOST }}
 
       - name: Generate and check coverage
         working-directory: ./frontend
