--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -21,6 +21,7 @@ jobs:
           component: true
         env:
           NEXT_PUBLIC_API_HOST: ${{ secrets.NEXT_PUBLIC_API_HOST }}
+          CYPRESS_TEST: true
 
       - name: Generate and check coverage
         working-directory: ./frontend
