--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     restart: always
     image: postgres:15
-    container_name: sam-postgres 
+    container_name: tractor-postgres 
     env_file:
       - '.env'
     ports:
