--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 asgiref==3.8.1
 attrs==25.3.0
+babel==2.17.0
+backrefs==6.1
 beautifulsoup4==4.13.4
 blis==1.3.0
 boolean.py==5.0
@@ -12,6 +14,7 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 cloudpathlib==0.21.1
+colorama==0.4.6
 confection==0.1.5
 coverage==7.10.7
 cssselect2==0.8.0
@@ -41,6 +44,7 @@ filetype==1.2.0
 fonttools==4.59.0
 freezegun==1.5.5
 fsspec==2025.5.1
+ghp-import==2.1.0
 hf-xet==1.1.5
 huggingface-hub==0.33.1
 idna==3.10
@@ -58,10 +62,16 @@ lazy_loader==0.4
 license-expression==30.4.4
 lxml==5.4.0
 marisa-trie==1.2.1
+Markdown==3.10
 markdown-it-py==3.0.0
 marko==2.1.4
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.7.1
+mkdocs-material-extensions==1.3.1
 more-itertools==10.7.0
 mpire==2.10.2
 mpmath==1.3.0
@@ -75,7 +85,9 @@ opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 packageurl-python==0.17.5
 packaging==25.0
+paginate==0.5.7
 pandas==2.3.0
+pathspec==1.0.3
 pillow==11.3.0
 pip-api==0.0.34
 pip-requirements-parser==32.0.1
@@ -94,6 +106,7 @@ pydyf==0.11.0
 Pygments==2.19.2
 PyJWT==2.9.0
 pylatexenc==2.10
+pymdown-extensions==10.20
 pyparsing==3.2.3
 pypdf==6.3.0
 pypdfium2==4.30.1
@@ -105,12 +118,14 @@ python-dotenv==1.1.0
 python-pptx==1.0.2
 pytz==2025.2
 PyYAML==6.0.2
+pyyaml_env_tag==1.1
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.4
 rich==14.0.0
 rpds-py==0.26.0
 rtree==1.4.0
+ruff==0.14.11
 safetensors==0.5.3
 scikit-image==0.25.2
 scipy==1.15.3
@@ -146,6 +161,7 @@ typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
 wasabi==1.1.3
+watchdog==6.0.0
 weasel==0.4.1
 weasyprint==66.0
 webencodings==0.5.1
