refactor: updated env.exmaples

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_API_HOST=
 AUTH_SECRET="" 
+AUTH_MICROSOFT_ENTRA_ID_ID=
+AUTH_MICROSOFT_ENTRA_ID_SECRET=
+AUTH_MICROSOFT_ENTRA_ID_ISSUER=
