--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,11 +14,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: Run ESLint
+        working-directory: ./frontend
+        run: npm run lint
+
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
           working-directory: ./frontend
           component: true
+          install: false
         env:
           NEXT_PUBLIC_API_HOST: ${{ secrets.NEXT_PUBLIC_API_HOST }}
           CYPRESS_TEST: true
