--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -46,6 +46,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run Ruff linter
+        run: ruff check .
+
+      - name: Run Ruff formatter check
+        run: ruff format --check .
+
       - name: Run Django tests
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
